# sophgo_demo

./: .gitignore  CMakeLists.txt  README.md  bmrun_helper.cpp  bmrun_helper.h  det_structs.h  main  main.cpp  main2.cpp
engines/: openvino_roadseg.cpp  openvino_roadseg.h  uf_lanedetv2.cpp  uf_lanedetv2.h  yolov5.cpp  yolov5.h  yolov8.cpp  yolov8.h  yolov8_seg.cpp  yolov8_seg.h
tracker/: kalman_filter.h  target_tracker.cpp  target_tracker.h
